登录样式一写好

--- a/src/style/css/common.css
+++ b/src/style/css/common.css
@@ -280,6 +280,7 @@ button.background_1a:active{
 .py_23{padding-top: 23px;padding-bottom: 23px;}
 .py_30{padding-top: 30px;padding-bottom: 30px;}
 .py_35{padding-top: 35px;padding-bottom: 35px;}
+.py_40{padding-top: 40px;padding-bottom: 40px;}
 .py_45{padding-top: 45px;padding-bottom: 45px;}
 .py_50{padding-top: 50px;padding-bottom: 50px;}
 .py_60{padding-top: 60px;padding-bottom: 60px;}
